# RMQV

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  analyze_wand_data.cpp  bench_rankers.cpp  benchmark.h  collection_config.hpp  configuration.hpp  create_freq_index.cpp  create_wand_data.cpp  document_fuser.hpp  ds2i_config.hpp  dump_rm.cpp  external_corpora_expansion.cpp  external_corpus_expansion.cpp  external_corpus_expansion_POC.cpp  external_corpus_sampler.cpp  profile_queries.cpp  queries.cpp  queries.hpp  queries_util.hpp  rankers.hpp  score_partitioning.hpp  shuffle_docids.cpp  single_shot_expansion.cpp  train_corpus_sampler.cpp  trec_queries.cpp  tst.qry  util.hpp  wand_data.hpp  wand_data_compressed.hpp  wand_data_raw.hpp  wand_utils.hpp  weighted_queries.hpp  weighted_sampler.hpp
docvector/: compress_qmx_decompress.c  create_docvectors.cpp  document_fuser.hpp  document_index.hpp  document_vector.hpp  util.hpp  weighted_sampler.hpp
example/: README.md  build-collections.sh  run_queries.sh
example/data/: queries.txt
example/param_files/: bignews.param  robust.param
format_index/: atire_to_ds2i.cpp  indri_to_ds2i.cpp
format_queries/: generate_ds2i_query_file.cpp  kstem.cpp  test.qry
param_files/: bignews.param  nyt.param  robust.param  wiki.param
